--- a/index.html
+++ b/index.html
@@ -1333,7 +1333,7 @@
         {
           id: 1,
           type: "single",
-          question: "1.宝丰集团始终坚守的安全环保核心理念是()",
+          question: "1.宝丰集团始终坚守的安全环保核心理念是",
           options: [
             { text: "预防为主、综合治理", correct: false },
             { text: "安全环保永远是我们的生命线", correct: true },
@@ -1344,7 +1344,7 @@
         {
           id: 2,
           type: "single",
-          question: '2.监察部通报宝丰集团一年有多少项"三违"问题()',
+          question: '2.监察部通报宝丰集团一年有多少项"三违"问题',
           options: [
             { text: "1000多项", correct: false },
             { text: "2000多项", correct: false },
@@ -1355,7 +1355,7 @@
         {
           id: 3,
           type: "single",
-          question: "3.宝丰集团每年召开几次重要会议解决经营管理问题()",
+          question: "3.宝丰集团每年召开几次重要会议解决经营管理问题",
           options: [
             { text: "1次", correct: false },
             { text: "2次", correct: true },
@@ -1366,7 +1366,7 @@
         {
           id: 4,
           type: "single",
-          question: "4.2026年宝丰集团计划搭建的管理平台是()",
+          question: "4.2026年宝丰集团计划搭建的管理平台是",
           options: [
             { text: "一卡通管理平台", correct: false },
             { text: "钉钉办公平台", correct: false },
@@ -1378,7 +1378,7 @@
           id: 5,
           type: "single",
           question:
-            "5.2026年宝丰集团实施现金采购的核心目标是至少降低多少成本()",
+            "5.2026年宝丰集团实施现金采购的核心目标是至少降低多少成本",
           options: [
             { text: "5%", correct: false },
             { text: "10%", correct: true },
@@ -1389,7 +1389,7 @@
         {
           id: 6,
           type: "single",
-          question: "6.宝丰集团财务管理的核心要求是()",
+          question: "6.宝丰集团财务管理的核心要求是",
           options: [
             { text: "控制风险,把每一分钱都要花在刀刃上", correct: true },
             { text: "扩大融资、增加资金储备", correct: false },
@@ -1400,7 +1400,7 @@
         {
           id: 7,
           type: "single",
-          question: "7.宝丰集团对监察部的工作要求是()",
+          question: "7.宝丰集团对监察部的工作要求是",
           options: [
             { text: "重点监管、事后问责", correct: false },
             { text: "全覆盖、无盲区,从源头控制风险", correct: true },
@@ -1411,7 +1411,7 @@
         {
           id: 8,
           type: "single",
-          question: "8.宝丰集团采购工作的核心理念可概括为哪八个字()",
+          question: "8.宝丰集团采购工作的核心理念可概括为哪八个字",
           options: [
             { text: "质量优先、成本可控", correct: false },
             { text: "质量、成本、诚信、共赢", correct: true },
@@ -1422,7 +1422,7 @@
         {
           id: 9,
           type: "single",
-          question: "9.宝丰集团现金采购需坚决杜绝的行为是()",
+          question: "9.宝丰集团现金采购需坚决杜绝的行为是",
           options: [
             { text: "技术人员全程参与质量把控", correct: false },
             { text: "乱付预付款", correct: true },
@@ -1433,7 +1433,7 @@
         {
           id: 10,
           type: "single",
-          question: "10.宝丰集团造价管理创新的核心方向是()",
+          question: "10.宝丰集团造价管理创新的核心方向是",
           options: [
             { text: "简化造价流程,降低精准度", correct: false },
             { text: "把造价工作标准化,建立完善造价模型", correct: true },
@@ -1444,7 +1444,7 @@
         {
           id: 11,
           type: "single",
-          question: "11.今年企管部重新改变的核心是()",
+          question: "11.今年企管部重新改变的核心是",
           options: [
             { text: "扩大组织架构、增加人员编制", correct: false },
             { text: "优化、合理、高效运行", correct: true },
@@ -1455,7 +1455,7 @@
         {
           id: 12,
           type: "single",
-          question: "12.行政管理中,会议管理要求坚决不开的会议类型是()",
+          question: "12.行政管理中,会议管理要求坚决不开的会议类型是",
           options: [
             { text: "专题会", correct: false },
             { text: "解决具体问题的会", correct: false },
@@ -1466,7 +1466,7 @@
         {
           id: 13,
           type: "multi",
-          question: "13.宝丰集团审计管理工作必须做到的要求包括()",
+          question: "13.宝丰集团审计管理工作必须做到的要求包括",
           options: [
             { text: "全流程、穿透式审计", correct: true },
             { text: "走过场、搞应付", correct: false },
@@ -1477,7 +1477,7 @@
         {
           id: 14,
           type: "multi",
-          question: "14. 宝丰集团行政管理重点抓好的工作有（）",
+          question: "14. 宝丰集团行政管理重点抓好的工作有",
           options: [
             { text: "运行管理与效能管理", correct: true },
             { text: "会议实效与干部履职", correct: true },
@@ -1488,7 +1488,7 @@
         {
           id: 15,
           type: "multi",
-          question: "15. 宝丰集团企管部今年工作的核心要求有（）",
+          question: "15. 宝丰集团企管部今年工作的核心要求有",
           options: [
             { text: "优化制度、流程、架构", correct: true },
             { text: "实现管理合理、高效运行", correct: true },
@@ -1499,7 +1499,7 @@
         {
           id: 16,
           type: "multi",
-          question: "16. 宝丰集团企业文化建设的目标包括（）",
+          question: "16. 宝丰集团企业文化建设的目标包括",
           options: [
             { text: "全面提炼、总结优秀企业文化", correct: true },
             { text: "让内部员工认可、认同企业文化", correct: true },
